<resources>
    <string name="app_name">MeatHeadAndroid</string>
    <string name="edit_message">Enter a message</string>
    <string name="workout_log_header">Workout Log</string>
    <string name="workout_planning_header">Workout Planning</string>
    <string name="add_exercise_button_text">Add Exercise</string>
    <string name="save_workout_button_text">Save Workout</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercises_label">Exercises</string>
    <string name="sets">Sets</string>
    <string name="workout_name">Workout Name</string>
    <string name="add_dialog_accept">Add</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="load_workout_confirm">Load</string>
    <string name="copy_workout_confirm">Copy</string>
    <string name="meatheadBanner">MeatHead</string>
    <string name="end_workout_button_text">End Workout</string>
    <string name="end_workout_confirm">End</string>
    <string name="end_workout_warning">End Workout? Once ended you can no longer modify the workout.</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
</resources>