<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:theme="@style/popup_dialogs">

    <AutoCompleteTextView
        android:id="@+id/exercise_name_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <CheckBox
            android:text="Reps Only"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/reps_only_checkbox"/>

</LinearLayout>